--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --color-darkblue: #363F5F;
     --color-lightblue: #969CB3;
     --color-darkgreen: #2D4A22;
+    --color-lightgreen: #3DD705;
     --color-lightgrey: #F0F2F5;
 }
 
@@ -15,6 +16,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+html {
+    font-size: 93.75%;
 }
 
 body {
@@ -29,9 +34,16 @@ header {
     text-align: center;
 }
 
-#logo {
-    color: var(--color-white);
-    font-weight: 100;
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
 }
 
 .container {
@@ -66,6 +78,9 @@ h2 {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card p {
@@ -77,6 +92,26 @@ h2 {
 .card.total {
     background-color: var(--color-total);
     color: var(--color-white);
+}
+
+a {
+    color: var(--color-total);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--color-lightgreen);
+}
+
+.button.new {
+    display: inline-block;
+    margin-bottom: 0.8rem;
+}
+
+#transaction {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
 }
 
 #data-table {
@@ -105,6 +140,11 @@ table tbody tr td:first-child {
     border-radius: 0.25rem 0 0 0.25rem;
 }
 
+table thead tr th:last-child,
+table tbody tr td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
 table tbody td {
     background-color: var(--color-white);
     padding: 1rem 2rem;
@@ -122,9 +162,114 @@ td.expense {
     color: var(--color-expense);
 }
 
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background-color: var(--color-lightgrey);
+    padding: 2.4rem;
+    position: relative;
+    width: 90%;
+    max-width: 500px;
+}
+
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+    padding: 0.8rem;
+    width: 100%;
+}
+
+.input-group small {
+    opacity: 0.5;
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
+}
+
+button {
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    border: none;
+    color: var(--color-white);
+    background-color: var(--color-total);
+    border-radius: 0.25rem;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 0.5px;
+}
+
+button:hover {
+    background-color: var(--color-lightgreen);
+}
+
+.button.cancel {
+    color: var(--color-expense);
+    border: 2px solid var(--color-expense);
+    border-radius: 0.25rem;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button.cancel:hover {
+    opacity: 1;
+    color: var(--color-white);
+    background-color: var(--color-expense);
+}
+
 footer {
     text-align: center;
     padding: 4rem 0 2rem;
     color: var(--color-darkblue);
     opacity: 0.6;
+}
+
+@media(min-width: 800px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
